fixed animation on mobile navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -154,6 +154,40 @@ body {
   font-family: Inter, sans-serif;
 }
 
+.mobile-navbar {
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 50;
+}
+.hide {
+  animation: slide-out 0.3s forwards;
+}
+.show {
+  animation: slide-in 0.3s forwards;
+}
+@keyframes slide-in {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
+
 /* Codelibrary section */
 .animate-pulse {
   animation: pulse 0.5s ease-in-out;
